--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
     <!--   <groupId>org.springframework.boot</groupId> -->
     <!--   <artifactId>spring-boot-starter-jdbc</artifactId> -->
     <!-- </dependency> -->
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
