--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,10 @@
     <!--   <artifactId>mybatis</artifactId> -->
     <!--   <version>3.5.6</version> -->
     <!-- </dependency> -->
-    <!-- <dependency> -->
-    <!--   <groupId>org.springframework.boot</groupId> -->
-    <!--   <artifactId>spring-boot-starter-jdbc</artifactId> -->
-    <!-- </dependency> -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.aspectj</groupId>
