--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.port=8888
 server.servlet.session.timeout=10s
 
 logging.level.com.xtransformers=debug
+
+spring.mvc.servlet.load-on-startup=1
